# gtk4-toolbar

./: .gitignore  README.md  icon.xml  layout.ui  main.cpp  meson.build  pixied.patch  pixiewood.xml  resources.gresource.xml
releases/: gtk4-toolbar-1.0.0.vsix  gtk4-toolbar-1.0.1.vsix
